--- a/app/src/main/res/layout/channel_type_view.xml
+++ b/app/src/main/res/layout/channel_type_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -12,16 +13,23 @@
         android:layout_height="match_parent"
         android:layout_marginRight="@dimen/channel_type_margin"
         android:drawablePadding="@dimen/switch_channel_type_icon_margin"
-        android:gravity="center"
+        android:includeFontPadding="false"
+        android:textSize="18sp"
         android:text="@string/public_channel" />
 
 
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/switch_channel_type"
-        android:theme="@style/SwitchChannelType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal" />
+
+
+    <ToggleButton
+        android:id="@+id/toggle_channel_type"
+        android:layout_width="37dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:background="@drawable/selector_switch"
+        android:textOff=""
+        android:textOn=""
+        />
 
 
     <TextView
@@ -30,7 +38,8 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/channel_type_margin"
         android:drawablePadding="@dimen/switch_channel_type_icon_margin"
-        android:gravity="center"
+        android:includeFontPadding="false"
+        android:textSize="18sp"
         android:text="@string/private_channel" />
 
 </merge>
