--- a/app/src/main/res/drawable/bg_date.xml
+++ b/app/src/main/res/drawable/bg_date.xml
@@ -2,9 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/post_message_corners" />
+    <corners android:radius="100dp" />
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/textListPrimary" />
+    <solid android:color="@color/tabUnSelected" />
+
 </shape>
