--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -21,8 +21,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/background"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:background="@color/background">
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/srl_chat"
@@ -56,9 +56,9 @@
 
     </RelativeLayout>
 
-
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/l_message"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -67,27 +67,30 @@
             style="@style/ImageButton"
             android:layout_width="@dimen/image_button_dimen_large"
             android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_alignParentStart="true"
             android:scaleType="center"
+            android:layout_gravity="center"
             android:src="@drawable/ic_attach" />
+
+        <EditText
+            android:id="@+id/et_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:hint="@string/message"
+            android:textColorHint="@color/textSecondary" />
 
         <ImageView
             android:id="@+id/iv_send_message"
             style="@style/ImageButton"
             android:layout_width="@dimen/image_button_dimen_large"
             android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_alignParentEnd="true"
             android:scaleType="center"
+            android:layout_weight="0"
+            android:layout_gravity="center"
             android:src="@drawable/ic_send" />
 
-        <EditText
-            android:id="@+id/et_message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toEndOf="@id/iv_attach"
-            android:layout_toStartOf="@id/iv_send_message"
-            android:hint="@string/message" />
+    </LinearLayout>
 
-    </RelativeLayout>
 </LinearLayout>
