--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,7 +12,10 @@
     <dimen name="edit_text_push_right">4dp</dimen>
 
     <dimen name="margin_default">16dp</dimen>
-    <dimen name="padding_default">8dp</dimen>
+
+    <dimen name="small">8dp</dimen>
+    <dimen name="normal">16dp</dimen>
+    <dimen name="large">32dp</dimen>
 
     <dimen name="welcome_screen_headers_margin_top">72dp</dimen>
     <dimen name="welcome_screen_headers_margin_bottom">48dp</dimen>
@@ -45,6 +48,7 @@
     <dimen name="list_item_chat_padding_name">10dp</dimen>
     <dimen name="list_item_chat_padding_timestamp">16dp</dimen>
     <dimen name="list_item_chat_text_size">16sp</dimen>
+    <dimen name="list_item_chat_date_size">12sp</dimen>
     <dimen name="list_item_chat_time_margin">8dp</dimen>
 
     <dimen name="post_message_corners">15dp</dimen>
