--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -58,26 +58,27 @@
 
     <LinearLayout
         android:id="@+id/l_message"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/iv_attach"
             style="@style/ImageButton"
             android:layout_width="@dimen/image_button_dimen_large"
             android:layout_height="@dimen/image_button_dimen_large"
-            android:scaleType="center"
             android:layout_gravity="center"
+            android:scaleType="center"
             android:src="@drawable/ic_attach" />
 
         <EditText
             android:id="@+id/et_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@null"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="@null"
+            android:fontFamily="sans-serif-light"
             android:hint="@string/message"
             android:textColorHint="@color/textSecondary" />
 
@@ -86,9 +87,9 @@
             style="@style/ImageButton"
             android:layout_width="@dimen/image_button_dimen_large"
             android:layout_height="@dimen/image_button_dimen_large"
-            android:scaleType="center"
-            android:layout_weight="0"
             android:layout_gravity="center"
+            android:layout_weight="0"
+            android:scaleType="center"
             android:src="@drawable/ic_send" />
 
     </LinearLayout>
