--- a/app/src/main/res/layout/list_item_post_other.xml
+++ b/app/src/main/res/layout/list_item_post_other.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="end"
     android:minHeight="@dimen/list_item_min_height"
     android:orientation="vertical"
     android:paddingEnd="@dimen/list_item_chat_padding"
@@ -11,6 +9,6 @@
 
     <include layout="@layout/header_post" />
 
-    <include layout="@layout/content_post_my" />
+    <include layout="@layout/content_post_other" />
 
 </LinearLayout>
