--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#616161</color>
     <color name="colorAccent">#00AC9D</color>
 
-    <color name="primaryStart">#00CD80</color>
+    <color name="primaryStart">#2bce7c</color>
     <color name="primaryEnd">#00AC9D</color>
 
     <color name="background">#f1f2f5</color>
