--- a/app/src/main/res/drawable/bg_date.xml
+++ b/app/src/main/res/drawable/bg_date.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="100dp" />
+    <corners android:radius="@dimen/post_message_corners" />
 
     <solid android:color="@color/tabUnSelected" />
 
