--- a/app/src/main/res/drawable/bg_post.xml
+++ b/app/src/main/res/drawable/bg_post.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@android:color/white"/>
-    <corners android:radius="@dimen/post_message_corners"/>
+    <solid android:color="#fcfcfd" />
+    <corners android:radius="@dimen/post_message_corners" />
 
 </shape>
