--- a/app/src/main/res/menu/toolbar.xml
+++ b/app/src/main/res/menu/toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_search_2"
+        android:icon="@drawable/ic_search"
         android:orderInCategory="100"
         android:title="@string/action_search"
         app:showAsAction="always" />
