--- a/app/src/main/res/layout/activity_choose_server.xml
+++ b/app/src/main/res/layout/activity_choose_server.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_subheading"
-        android:paddingStart="4dp"
+        android:paddingStart="@dimen/activity_choose_server_et_url_padding_start"
         android:text="@string/enter_server_url_capt" />
 
     <Spinner
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/margin_default"
-        android:padding="16dp"
+        android:padding="@dimen/activity_choose_server_button_padding"
         android:text="@string/next" />
 
 </RelativeLayout>
