implement added members search

--- a/app/src/main/res/layout/activity_added_people.xml
+++ b/app/src/main/res/layout/activity_added_people.xml
@@ -15,7 +15,16 @@
             style="@style/AppToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_back" />
+            app:navigationIcon="@drawable/ic_back">
+
+            <EditText
+                android:id="@+id/et_added_members_filter"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/added_members_title"
+                android:drawableRight="@drawable/ic_search"/>
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
