--- a/app/src/main/res/layout/activity_added_people.xml
+++ b/app/src/main/res/layout/activity_added_people.xml
@@ -17,13 +17,6 @@
             android:layout_height="?attr/actionBarSize"
             app:navigationIcon="@drawable/ic_back">
 
-            <EditText
-                android:id="@+id/et_added_members_filter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/added_members_title"
-                android:drawableRight="@drawable/ic_search"/>
-
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
@@ -32,7 +25,7 @@
         android:id="@+id/rv_added_members"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="30dp"
+        android:layout_margin="20dp"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
     </android.support.v7.widget.RecyclerView>
