--- a/app/src/main/res/layout/activity_added_people.xml
+++ b/app/src/main/res/layout/activity_added_people.xml
@@ -12,9 +12,9 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            style="@style/AppToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:theme="@style/AppToolbar"
             app:navigationIcon="@drawable/ic_back">
 
         </android.support.v7.widget.Toolbar>
@@ -25,7 +25,7 @@
         android:id="@+id/rv_added_members"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
+        android:layout_margin="@dimen/added_people_rv_margin"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
     </android.support.v7.widget.RecyclerView>
