Added channel read notification clear

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -34,12 +34,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_messages"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    tools:listitem="@layout/list_item_post"
+                    tools:listitem="@layout/list_item_post_my"
                     android:scrollbars="vertical"
                     android:visibility="visible" />
 
