--- a/app/src/main/res/layout/activity_search_chat.xml
+++ b/app/src/main/res/layout/activity_search_chat.xml
@@ -9,7 +9,32 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        app:title="@string/action_search"/>
+        app:navigationIcon="@drawable/ic_back"
+        app:contentInsetStart="0dp"
+        app:contentInsetStartWithNavigation="0dp">
+
+        <com.devspark.robototextview.widget.RobotoEditText
+            android:id="@+id/et_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:typeface="roboto_regular"
+            android:textSize="@dimen/search_chat_toolbar_text_size"
+            android:hint="@string/activity.search.chat.search"
+            android:textColorHint="@color/tabUnSelected"
+            android:layout_gravity="start"
+            android:background="@null"/>
+
+        <ImageButton
+            android:id="@+id/btn_clear_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:layout_marginEnd="@dimen/normal"
+            android:src="@drawable/ic_close"
+            android:background="@android:color/transparent"
+            android:layout_gravity="end"/>
+
+    </android.support.v7.widget.Toolbar>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
