--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
 
-    <LinearLayout
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:paddingTop="@dimen/user_item_top_padding">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -11,28 +15,25 @@
 
         <ImageView
             android:id="@+id/iv_preview_image"
-            android:layout_width="@dimen/list_item_image"
-            android:layout_height="@dimen/list_item_image"
-            android:layout_marginTop="@dimen/small"
-            android:layout_marginBottom="@dimen/small"
+            android:layout_width="@dimen/list_item_image_chat"
+            android:layout_height="@dimen/list_item_image_chat"
+            android:layout_marginStart="@dimen/large"
             android:src="@drawable/no_resource" />
 
 
-        <TextView
+        <com.devspark.robototextview.widget.RobotoTextView
             android:id="@+id/tv_channel_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_margin="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/user_avatar_right_margin"
+            android:layout_marginStart="@dimen/user_avatar_right_margin"
             android:singleLine="true"
             android:textColor="@color/textListPrimary"
+            app:typeface="roboto_regular"
             android:textSize="@dimen/list_item_heading_text" />
 
 
     </LinearLayout>
 
-    <View
-        android:background="@color/separator_list"
-        android:layout_height="1dp"
-        android:layout_width="match_parent" />
 </FrameLayout>
